# cplusplus_digital_image_processor

./: CMakeLists.txt  Fibonacci-Project-Report.docx  LICENSE  README.md  performance.cpp
mac_exc/: tests
src/: Filter.cpp  Filter.h  Image.cpp  Image.h  Projection.cpp  Projection.h  Slice.cpp  Slice.h  Volume.cpp  Volume.h  main.cpp  stb_image.h  stb_image_write.h  utils.cpp  utils.h
tests/: Tests.cpp  Tests.h  main.cpp
tests/data/: AdditionalBlurringTesting.ipynb  colour_check_opencv.py
win_exc/: advanced_programming_group_fibonacci  performance
